<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_arrow_back"
        android:scaleType="centerInside"
        app:tint="@color/black"
        android:contentDescription="@string/content_desc_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_material_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/btn_back"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/alexandria_bold"/>

    <EditText
        android:id="@+id/edt_nome_documento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_material_hint_name"
        android:fontFamily="@font/alexandria"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        android:layout_marginHorizontal="20dp" />

    <TextView
        android:id="@+id/tv_selected_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_material_no_file_selected"
        app:layout_constraintTop_toBottomOf="@id/btn_select_file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alexandria"/>

    <Button
        android:id="@+id/btn_select_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_material_btn_select"
        app:layout_constraintTop_toBottomOf="@id/edt_nome_documento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alexandria"
        android:backgroundTint="@color/studynest_purple"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:fontFamily="@font/alexandria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/studynest_purple"/>

</androidx.constraintlayout.widget.ConstraintLayout>